##add_subdirectory(MongoJson)
##add_subdirectory(MongoFhicl)
##add_subdirectory(MongoXml)

##add_subdirectory(FileSystemJson)
##add_subdirectory(FileSystemFhicl)
##add_subdirectory(FileSystemXml)

add_subdirectory(UcondJson)
#add_subdirectory(UcondFhicl)
#add_subdirectory(UcondXml)

install_source()
